Revision history for {{$dist->name}}

{{$NEXT}}

1.100691  2010-03-10 17:10:53 America/New_York
          just like 1.100690, but passes its own tests!

1.100690  2010-03-10 14:24:59 America/New_York
          remove obsolete "list_name" alias to prefix
          object-level prefix no longer automatically ends in ": "

1.100681  2010-03-09 23:02:11 America/New_York
          rerelease with a tarball that isn't totally insane

1.100680  2010-03-09 22:47:23 America/New_York
          rewrite all log_ methods in terms of ->log
          ->log now includes the code formerly in the internal ->_log_at
          add a new per-message prefix system
          old-style prefix (to be removed) now handle multi-line messages

          * new prefix system is not yet documented, pending experimentation

1.100670  2010-03-08 19:15:30 America/New_York
          make env vars in code match env vars in docs

1.100660  2010-03-07 22:00:58 America/New_York
          add clear_events method
          loggers made with new_tester log to_self

1.100630  2010-03-04 18:41:13 America/New_York
          some more docs
          switch to Dist::Zilla for dist maintenance
          declare some previously missing prereqs

1.008     2010-02-22
          ->fatal now redispatches to ->log_fatal

1.007     2010-02-22
          ** THIS BREAKS BACKCOMPAT IN A TINY WAY **
          ->debug now means ->log_debug
          ->is_debug and ->set_debug replace the old ->debug
          ->log_info is replaced by ->info

1.006     2010-02-21
          add is_debug, is_info, is_fatal
          log_fatal logs as 'error' level
          change the way the undocumented "prefix" system works

1.005     2010-02-12
          make Makefile.PL prereq match actual required versions

1.004     2010-02-10
          allow multiple arguments to ->log and friends
          allow user to disable logging of pid

1.003     2009-01-15
          relax a test that was complaining for no good reason
